@@ -24,9 +24,11 @@ picker-tape-measure=Tape Measure
 picker-ore-eraser=Ore Eraser
 picker-camera=Screenshot Camera
 picker-wire-cutter=Wire Cutter
+picker-rewire=Wire Adjuster
 
 [item-description]
 picker-tape-measure=A tool for quickly measuring areas.
 picker-ore-eraser=Counts ores in the selected area, use SHIFT to Remove the selected ores from the world. Drop it on the ground to destroy it.
 picker-camera=Takes a screenshot of selection area. Use SHIFT to display "alt-info". File available in the script output folder.
 picker-wire-cutter=Remove all copper wires from the selected entities, [ALT] remove all network wires from the selected entities.
+picker-rewire=Straighten out all connected wires.
