@@ -22,7 +22,8 @@ picker-chat-color=Chat Color
 picker-character-color=Character Color
 picker-use-groups=Use Item Groups
 picker-use-subgroups=Use Item Subgroups
-picker-fix-trash-filters=Sync trash filters with logistics
+picker-fix-trash-filters=Sync Trash Filters and Logistics
+picker-tool-rewire=Enable Rewire Tool
 
 [mod-setting-description]
 picker-item-zapper=Space seperated list of item names that will be zapped into the nether when dropping them with __CONTROL__drop-cursor__ key.
@@ -50,3 +51,4 @@ picker-character-color=Default character color when making a new player.
 picker-use-groups=Use Item Groups when selecting recipes, items or filters.
 picker-use-subgroups=Use Item Subgroups when selecting recipes, items or filters.
 picker-fix-trash-filters=Sync trash filters with logistics when inventory is opened.
+picker-tool-rewire=Enable rewire tool.
