@@ -4,8 +4,9 @@ Date: ??????
   Features:
     - Removed many scripts to their own mods.
     - Added Recipe Group/Subgroup toggles.
-    - Added Auto trash fix.
+    - Added Auto Trash Fix.
     - Character Modifiers are restored when respawning.
+    - Added Rewire Tool.
   Changes:
     - Wire-stripper is now a tool in the blueprint library.
     - Changed the keybind for renamer.
